fixed annoying scrollbar snapping (#50)

--- a/static/scss/scoreboard.scss
+++ b/static/scss/scoreboard.scss
@@ -1,5 +1,9 @@
-html,body,.full-height {
-    height: 100%;
+html {
+    overflow-y: scroll;
+
+    &,body,.full-height {
+        height: 100%;
+    }
 }
 
 body {
@@ -338,4 +342,8 @@ table.team-players{
             text-align: center;
         }
     }
+}
+
+.modal {
+    overflow-y: auto;
 }
